--- a/djblog/templates/article/detail.html
+++ b/djblog/templates/article/detail.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block slideshow %}
+{% endblock %}
+
 {% block content %}
 <aside id="colorlib-breadcrumbs">
     <div class="container">
@@ -50,15 +53,13 @@
                         </div>
                         {% endif %}
                         <span class="category text-center">
-                            <a href="#"><i class="icon-calendar3"></i>{{ article.created_at|date:'Y-m-d H:M' }}</a>
+                            <a href="#"><i class="icon-calendar3"></i>{{ article.created_at|date:'Y-m-d H:i' }}</a>
                             | <a href="#" class="posted-by"><i class="icon-user2"></i> {{ article.author.username }}</a>
                             | <a href="#"><i class="icon-bubble3"></i>{{ article.comment_set.count }}</a></span>
                     </div>
                     <div class="desc">
                         {{ article.content }}
                     </div>
-                    <p class="text-center"><a href="#" class="btn btn-primary btn-custom">Continue Reading</a>
-                    </p>
                 </article>
                 {% else %}
                 <article class="blog-entry">
@@ -118,15 +119,13 @@
                             </li>
                         </ol>
                     </div>
-                    <p class="text-center"><a href="blog.html" class="btn btn-primary btn-custom">Continue Reading</a>
-                    </p>
                 </article>
                 {% endif %}
 
                 <div class="comment-box">
                     <h2 class="colorlib-heading-2">3 Comments</h2>
                     <div class="comment-post">
-                        <div class="user" style="background-image: url(images/person1.jpg);"></div>
+                        <div class="user" style="background-image: url({% get_static_prefix %}images/person1.jpg);"></div>
                         <div class="desc">
                             <h3>Stephen Brent <span>Commented 5 days ago</span></h3>
                             <p>A small river named Duden flows by their place and supplies. Mountains, she had a
@@ -135,7 +134,7 @@
                         </div>
                     </div>
                     <div class="comment-post">
-                        <div class="user" style="background-image: url(images/person2.jpg);"></div>
+                        <div class="user" style="background-image: url({% get_static_prefix %}images/person2.jpg);"></div>
                         <div class="desc">
                             <h3>Stephen Brent <span>Commented 5 days ago</span></h3>
                             <p>A small river named Duden flows by their place and supplies. Mountains, she had a
@@ -144,7 +143,7 @@
                         </div>
                     </div>
                     <div class="comment-post">
-                        <div class="user" style="background-image: url(images/person3.jpg);"></div>
+                        <div class="user" style="background-image: url({% get_static_prefix %}images/person3.jpg);"></div>
                         <div class="desc">
                             <h3>Stephen Brent <span>Commented 5 days ago</span></h3>
                             <p>A small river named Duden flows by their place and supplies. Mountains, she had a
