--- a/djblog/templates/base.html
+++ b/djblog/templates/base.html
@@ -21,10 +21,10 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
 
-    <link href="https://fonts.lug.ustc.edu.cn/css?family=Grand+Hotel" rel="stylesheet">
-    <link href="https://fonts.lug.ustc.edu.cn/css?family=Fira+Sans:100,200,300,400,700" rel="stylesheet">
-    <link href="https://fonts.lug.ustc.edu.cn/css?family=Lora:400,400i,700" rel="stylesheet">
-    <link href="https://fonts.lug.ustc.edu.cn/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.loli.net/css?family=Grand+Hotel" rel="stylesheet">
+    <link href="https://fonts.loli.net/css?family=Fira+Sans:100,200,300,400,700" rel="stylesheet">
+    <link href="https://fonts.loli.net/css?family=Lora:400,400i,700" rel="stylesheet">
+    <link href="https://fonts.loli.net/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="{% get_static_prefix %}css/animate.css">
