--- a/djblog/templates/base.html
+++ b/djblog/templates/base.html
@@ -242,7 +242,9 @@
             <div class="col-md-4 col-md-push-1">
               <h2>Tags</h2>
               <p class="tags">
-                <span><a href="#"><i class="icon-tag"></i> Modeling</a></span>
+                {% for tag in tag_list %}
+                <span><a href="#"><i class="icon-tag"></i>{{ tag.name }}</a></span>
+                {% empty %}
                 <span><a href="#"><i class="icon-tag"></i> Fashion</a></span>
                 <span><a href="#"><i class="icon-tag"></i> Life</a></span>
                 <span><a href="#"><i class="icon-tag"></i> Blog</a></span>
@@ -261,6 +263,7 @@
                 <span><a href="#"><i class="icon-tag"></i> Ocean</a></span>
                 <span><a href="#"><i class="icon-tag"></i> Office</a></span>
                 <span><a href="#"><i class="icon-tag"></i> Home</a></span>
+                {% endfor %}
               </p>
             </div>
           </div>
