--- a/djblog/templates/article/detail.html
+++ b/djblog/templates/article/detail.html
@@ -124,6 +124,15 @@
 
         <div class="comment-box">
           <h2 class="colorlib-heading-2">3 Comments</h2>
+          {% for comment in comment_list %}
+          <div class="comment-post">
+            <div class="user" style="background-image: url({% get_static_prefix %}images/person1.jpg);"></div>
+            <div class="desc">
+              <h3>{{ comment.nickname }} <span>{{ comment.created_at|date:'Y-m-d H:i' }}</span></h3>
+              <p>{{ comment.content }}</p>
+            </div>
+          </div>
+          {% empty %}
           <div class="comment-post">
             <div class="user" style="background-image: url({% get_static_prefix %}images/person1.jpg);"></div>
             <div class="desc">
@@ -151,33 +160,22 @@
                 Alphabet Village and the subline of her own road, the Line Lane.</p>
             </div>
           </div>
+          {% endfor %}
         </div>
         <div class="comment-area">
           <h2 class="colorlib-heading-2">Leave a comment</h2>
           <form action="#">
             <div class="row form-group">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <!-- <label for="fname">First Name</label> -->
-                <input type="text" id="fname" class="form-control" placeholder="Your firstname">
-              </div>
-              <div class="col-md-6">
-                <!-- <label for="lname">Last Name</label> -->
-                <input type="text" id="lname" class="form-control" placeholder="Your lastname">
+                <input type="text" id="fname" class="form-control" placeholder="昵称">
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
                 <!-- <label for="email">Email</label> -->
-                <input type="text" id="email" class="form-control" placeholder="Your email address">
-              </div>
-            </div>
-
-            <div class="row form-group">
-              <div class="col-md-12">
-                <!-- <label for="subject">Subject</label> -->
-                <input type="text" id="subject" class="form-control"
-                       placeholder="Your subject of this message">
+                <input type="text" id="email" class="form-control" placeholder="邮箱地址">
               </div>
             </div>
 
@@ -185,11 +183,11 @@
               <div class="col-md-12">
                 <!-- <label for="message">Message</label> -->
                 <textarea name="message" id="message" cols="30" rows="10" class="form-control"
-                          placeholder="Say something about us"></textarea>
+                          placeholder="评论内容"></textarea>
               </div>
             </div>
             <div class="form-group">
-              <input type="submit" value="Post Comment" class="btn btn-primary">
+              <input type="submit" value="提交评论" class="btn btn-primary">
             </div>
 
           </form>
