--- a/djblog/templates/article/detail.html
+++ b/djblog/templates/article/detail.html
@@ -164,25 +164,27 @@
         </div>
         <div class="comment-area">
           <h2 class="colorlib-heading-2">Leave a comment</h2>
-          <form action="#">
+          <form action="{% url 'comment' %}" method="POST">
+            {% csrf_token %}
+            <input name="article" type="hidden" value="{{ article.id }}"/>
             <div class="row form-group">
               <div class="col-md-12">
                 <!-- <label for="fname">First Name</label> -->
-                <input type="text" id="fname" class="form-control" placeholder="昵称">
+                <input type="text" id="fname" name="nickname" class="form-control" placeholder="昵称">
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
                 <!-- <label for="email">Email</label> -->
-                <input type="text" id="email" class="form-control" placeholder="邮箱地址">
+                <input type="text" id="email" name="email" class="form-control" placeholder="邮箱地址">
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
                 <!-- <label for="message">Message</label> -->
-                <textarea name="message" id="message" cols="30" rows="10" class="form-control"
+                <textarea name="content" id="content" name="content" cols="30" rows="10" class="form-control"
                           placeholder="评论内容"></textarea>
               </div>
             </div>
